[package]
name = "hybrid_data_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloomfilter = "1.0.9"
rand = "0.8"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "hybrid_benchmark"
harness = false